fix spacing in slider

--- a/packages/components/src/mobile/bottom-sheet/cellRowStyles.scss
+++ b/packages/components/src/mobile/bottom-sheet/cellRowStyles.scss
@@ -1,6 +1,6 @@
 .cellRowStyles {
 	min-height: 48px;
-	margin-bottom: -37px;
+	margin-bottom: -13px;
 	width: 100%;
 	justify-content: space-between;
 }
